# autopoiesis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  compose.yaml  nuagent.json  run.sh
.github/workflows/: verify.yml
include/autopoiesis/: api_budget.hpp  calendar.hpp  decision.hpp  devil.hpp  feature_request.hpp  logger.hpp  openai_client.hpp  raylib_interface.hpp  renderer.hpp  runtime_handoff.hpp  simulation.hpp  types.hpp  ui_model.hpp  validation.hpp  web_interface.hpp  world.hpp
normes/: README.md  glossaire.md
scripts/: activate-evolution.sh  approve-feature.sh  check-evolution-scope.py  codex-feature-hook.sh  evolution-daemon.sh  evolution-ui.py  find-codex.sh  god-agent.sh  god-correction-agent.sh  notify-evolution-events.sh  notify-macos.sh  reformulate-feature.py  reject-feature.sh  run-evolution-daemon-loop.sh  setup-nuagent.sh  validator-agent.sh  validator-feature-hook.sh  verify-evolution.sh  write-god-changelog.py
scripts/launchd/: com.autopoiesis.evolution.plist.example
scripts/schemas/: validator-result.json
src/: api_budget.cpp  calendar.cpp  decision.cpp  devil.cpp  feature_request.cpp  logger.cpp  main.cpp  openai_client.cpp  raylib_interface.cpp  renderer.cpp  runtime_handoff.cpp  simulation.cpp  ui_model.cpp  validation.cpp  web_interface.cpp  web_main.cpp  world.cpp
tasks/: todo.md
tests/: activity_preview.cpp  budget_test.cpp  evolution_progress_preview.cpp  test_api_diagnostics.cpp  test_attributes.cpp  test_behavior.cpp  test_calendar.cpp  test_camp_stockpile.cpp  test_campfire.cpp  test_checkpoint.cpp  test_collective_camp.cpp  test_collective_life.cpp  test_core.cpp  test_crafting.cpp  test_dangers.cpp  test_devil.cpp  test_docker_ownership.py  test_ecosystem.cpp  test_emotions.cpp  test_exploration.cpp  test_food_planning.cpp  test_goal.cpp  test_health.cpp  test_inventory.cpp  test_macos_notifications.py  test_period_memory.cpp  test_population.cpp  test_prompts.cpp  test_reformulation.py  test_relationships.cpp  test_reporting.cpp  test_resource_transport.cpp  test_rest.cpp  test_run_launcher.py  test_shelter.cpp  test_skills.cpp  test_spatial_building.cpp  test_survival_ai.cpp  test_timing.cpp  test_tool_chain.cpp  (+6 more)
web/: index.html  package.json
web/server/: ai-services.ts  app.ts  backend-process.ts  command-schema.ts  index.ts
web/src/: App.tsx  protocol.ts  styles.css  transport.ts
web/src/components/: Inspector.tsx  ProgressDock.tsx  ValidationOverlay.tsx  WorldScene.tsx
web/src/hooks/: useSimulation.ts
web/src/lib/: format.ts
web/tests/: ai-services.test.ts  app.test.ts  backend-process.test.ts  fixtures.ts  protocol.test.ts  simulation-state.test.ts  validation-ui.test.tsx
